--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,9 +1,15 @@
 .button {
-  border: 2px solid black;
-  height: 37px;
-  width: 280px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: blue;
+    height: 37px;
+    width: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #3369F3;
+    border-radius: 8px;
+    font-family: Inter, Arial, sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 13px;
 }
