--- a/src/components/dialog-window/dialog-window.scss
+++ b/src/components/dialog-window/dialog-window.scss
@@ -1,6 +1,6 @@
 .dialog-window {
     width: 340px;
-    min-height: 256px;
+    height: 450px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
     background-color: white;
     border-radius: 12px;
