--- a/src/components/dialog-window/__heading/__heading.scss
+++ b/src/components/dialog-window/__heading/__heading.scss
@@ -9,7 +9,7 @@
     font-style: normal;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 11%;
+    margin-top: 50px;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
