Точка перед началом вёрстки content-container
Сейчас хорошо работает заголовок.
Нужно отлаживать работу dialog-window.
Этим и займусь.

--- a/src/components/dialog-window/dialog-window.scss
+++ b/src/components/dialog-window/dialog-window.scss
@@ -1,7 +1,8 @@
 .dialog-window {
     width: 340px;
-    height: 450px;
+    min-height: 257px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.14);
     background-color: white;
     border-radius: 12px;
+    padding-bottom: 50px;
 }
