--- a/src/components/dialog-window/__heading/__heading.scss
+++ b/src/components/dialog-window/__heading/__heading.scss
@@ -7,9 +7,8 @@
     min-width: 50px;
     font-family: Inter, Arial, sans-serif;
     font-style: normal;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 50px;
+    margin-bottom: 60px;
     font-weight: 500;
     font-size: 20px;
     line-height: 20px;
