Сделала dialog-window
С __content-container нужно еще поработать
но общий вид и структура созданы.

--- a/src/components/dialog-window/dialog-window.hbs
+++ b/src/components/dialog-window/dialog-window.hbs
@@ -1,1 +1,1 @@
-<div class='dialog-window'>{{> __heading }}{{content}}</div>
+<div class='dialog-window'>{{> __heading }}{{> __content-container }}</div>
